# Typeset

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/markdown-test/: page.tsx
src/components/: context-graph.tsx  folder-badge.tsx  markdown-preview.tsx  typeset-app.tsx  workspace-overview.tsx
src/lib/: markdown-test-content.ts  typeset-api.ts  typeset-updater.ts
test-fixtures/markdown-kitchen-sink/: Kitchen-Sink.md  Project.md  README.md
test-fixtures/markdown-kitchen-sink/Project/: Child-Note.md  Grandparent.md
test-fixtures/markdown-kitchen-sink/Project/Grandparent/: Grandchild.md
test-fixtures/markdown-kitchen-sink/Research/: Code-Blocks.md  Edge-Cases.md  Links-And-Media.md  Tables-And-Tasks.md  Unsafe-HTML.md
